--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website</title>
 </head>
-<body style=" background-color:rgb(255, 234, 234);">
+<body style=" background-color:rgb(255, 234, 238);">
 
     <h1 style="text-align: center ;"> This is Dipta Sarker</h1>
     <h1 style="text-align: center ;"> ID: CH.EN.U4CSE19146</h1>
+    <h1 style="text-align: center ;"> This is a static web page hosted on Azure replicating the AWS s3 bucket</h1>
 </body>
 </html>
