--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <h1 style="text-align: center ;"> This is Dipta Sarker</h1>
     <h1 style="text-align: center ;"> ID: CH.EN.U4CSE19146</h1>
-    <h1 style="text-align: center ;"> This is a static web page hosted on Azure replicating the AWS s3 bucket</h1>
+    <h1 style="text-align: center ;"> This is a static web page hosted on Azure similar to the AWS S3 bucket</h1>
 </body>
 </html>
